--- a/BlogAspNetMVC/Views/Shared/_Layout.cshtml
+++ b/BlogAspNetMVC/Views/Shared/_Layout.cshtml
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="GetAllArticles">Статьи</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="CreateNewArticle">Статьи</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetAllUsers">Пользователи</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="GetAllTags">Теги</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="CreateNewTag">Теги</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="GetAllRoles">Роли</a>
