--- a/BlogAspNetMVC/wwwroot/css/site.css
+++ b/BlogAspNetMVC/wwwroot/css/site.css
@@ -69,3 +69,39 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+/*
+    теги
+*/
+.tag-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tag-box {
+    background-color: rgba(255, 255, 255, 0); /* Прозрачный фон */
+    margin: 10px;
+    padding: 15px;
+    border: 1px solid gray; /* Серый цвет границы */
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    min-width: 50%; /* Минимальная ширина 50% */
+    box-sizing: border-box; /* Учитываем границы и отступы в ширине */
+}
+
+    .tag-box a {
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+.article-count {
+    float: right;
+    font-size: 0.9em;
+    color: #777;
+}
+
+.rounded-bg {
+    border-radius: 5px; /* Скругление углов */
+    padding: 2px 5px; /* Отступы вокруг текста */
+}
