--- a/BlogAspNetMVC/Views/Role/GetAllRoles.cshtml
+++ b/BlogAspNetMVC/Views/Role/GetAllRoles.cshtml
@@ -18,7 +18,7 @@
                 <div>
                     <a href="@Url.Action("GetUsersByRole", "Users", new { RoleName = Role.Name })">@Role.Name</a>
                 </div>
-                <div class="article-count">(Пользователей по тегу: @Role.UsersId.Count)</div>
+                <div class="article-count">(Пользователей по роли: @Role.UsersId.Count)</div>
             </div>
         }
     </div>
